refactor: simplify core models and session utilities